# solar-backend

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint.yaml
app/: main.py  models.py
app/config/: dev.py  prod.py
app/routers/: lux.py
migrations/auth_proxy/: 3_20231113092725_None.py
